<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".llTrain">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="183dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/name"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:hint="name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:hint="surname"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="227dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:hint="email"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/surname"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <TextView
        android:id="@+id/seekText"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/BIGSH"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47" />

    <RadioGroup
        android:id="@+id/radioGr"
        android:layout_width="161dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2">

        <RadioButton
            android:id="@+id/rdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButtName" />

        <RadioButton
            android:id="@+id/rdSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButtSur" />

        <RadioButton
            android:id="@+id/rdEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButtEmail" />

        <RadioButton
            android:id="@+id/rdNull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nully" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultText" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>